--- a/resources/assets/sass/modules/sites/liefdesdate-nl/module-profiles.scss
+++ b/resources/assets/sass/modules/sites/liefdesdate-nl/module-profiles.scss
@@ -9,7 +9,7 @@
         width: 100%;
         height: 30px;
         border-radius: 0 0 3px 3px;
-        background-color: lighten($secondaryColor, 5%);
+        background-color: $secondaryColor;
         // box-shadow: 1px 2px 2px rgba(0,0,0,0.3);
 
         cursor: pointer;
@@ -27,7 +27,7 @@
         }
 
         &:hover {
-            background-color: $secondaryColor;
+            background-color: darken($secondaryColor, 5%);
         }
     }
 
