--- a/resources/assets/sass/sites/liefdesdate-nl/scaffolding.scss
+++ b/resources/assets/sass/sites/liefdesdate-nl/scaffolding.scss
@@ -19,7 +19,7 @@ body {
 
 @media (min-width: $screen-md-min) {
     .removePadding {
-        padding: 0;
+        padding: 0 !important;
     }
 }
 
