--- a/resources/assets/sass/altijdsex-nl-variables.scss
+++ b/resources/assets/sass/altijdsex-nl-variables.scss
@@ -46,6 +46,7 @@ $roundImageDimensions: (
 // layout tweaks
 $borderRadius: 5;
 $borderWidth: 1;
+$boxShadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
 // font tweaks
 $fontSize: (
