--- a/resources/assets/sass/components/sites/sweetalk-nl/user-profile.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/user-profile.scss
@@ -8,6 +8,7 @@
 .User-profile__info {
     &__body {
         padding: 0;
+        font-size: 1.7rem;
 
         table {
             margin-bottom: 0;
@@ -61,7 +62,7 @@
 .User-profile__about {
     &__body {
         padding: 20px 20px 10px;
-
+        font-size: 1.7rem;
     }
 
     blockquote {
