--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -13,7 +13,7 @@
     border-radius: $borderRadius + px;
 
     background-color: $tileBgColor;
-    box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
+    box-shadow: $boxShadow;
 
     text-align: justify;
 
