--- a/resources/assets/sass/liefdesdate-nl-variables.scss
+++ b/resources/assets/sass/liefdesdate-nl-variables.scss
@@ -47,6 +47,7 @@ $roundImageDimensions: (
 // layout tweaks
 $borderRadius: 10;
 $borderWidth: 1;
+$boxShadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
 // font tweaks
 $fontSize: (
