--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -25,7 +25,7 @@
 @import "sites/altijdsex-nl/search-bar";
 @import "forms";
 @import "pagination";
-@import "footer";
+@import "sites/altijdsex-nl/footer";
 
 // Components
 @import "components/tile";
