--- a/resources/assets/sass/sweetalk-nl.scss
+++ b/resources/assets/sass/sweetalk-nl.scss
@@ -22,6 +22,7 @@
 
 @import "sites/sweetalk-nl/scaffolding";
 @import "sites/sweetalk-nl/navbar";
+@import "sites/sweetalk-nl/hero";
 @import "sites/sweetalk-nl/search-bar";
 @import "forms";
 @import "pagination";
