--- a/resources/assets/sass/components/sites/sweetalk-nl/discount-header.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/discount-header.scss
@@ -4,7 +4,7 @@
   text-align: center;
   justify-content: center;
   margin-bottom: 15px;
-  margin-top: -11px;
+  margin-top: 15px;
   background-color: #ec7070;
   color: #fff;
   font-weight: 500;
@@ -14,7 +14,7 @@
   font-size: 1.7rem;
 
   @media (max-width: $screen-sm-max) {
-    margin-top: -5px;
+    //margin-top: -5px;
   }
 
   &:hover {
