--- a/resources/assets/sass/sites/sweetalk-nl/scaffolding.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/scaffolding.scss
@@ -29,6 +29,7 @@ img {
 
 .mainContainer {
     position: relative;
+    padding-top: 15px;
     //padding-top: ($navbarHeight + $extraPaddingTopMainContent + 30) + px;
     //
     //@media (max-width: $screen-sm-max) {
