--- a/resources/assets/sass/sites/sweetalk-nl/search-bar.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/search-bar.scss
@@ -1,4 +1,6 @@
 .SearchBar {
+    //display: none;
+
     &.hiddenSmallScreens {
         @media (max-width: $screen-sm-max) {
             display: none;
