--- a/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
@@ -39,6 +39,7 @@
             padding-left: 15px;
 
             &__text {
+                display: inline-flex;
                 position: relative;
                 font-size: 1.9rem;
             }
@@ -49,29 +50,25 @@
         }
 
         &__newMessages {
-            position: absolute;
-            display: flex;
+            display: inline-flex;
             justify-content: center;
             align-items: center;
-            right: -25px;
-            bottom: 6px;
-            color: #ff5b49;
-
-            .material-icons {
-                font-size: 1.7rem;
-            }
+            margin-left: 10px;
+            color: #fff;
+            border-radius: 50%;
+            font-weight: 500;
+            font-size: 1.4rem;
+            height: 25px;
+            width: 25px;
+            background-color: #ff5b49;
 
             &.mobile {
+                position: absolute;
                 right: -6px;
                 bottom: initial;
                 top: -6px;
-                background-color: #2c2c2c;
                 padding: 5px;
                 border-radius: 50%;
-
-                .material-icons {
-                    font-size: 1.5rem;
-                }
             }
         }
     }
