--- a/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
@@ -40,6 +40,7 @@
 
             &__text {
                 display: inline-flex;
+                align-items: center;
                 position: relative;
                 font-size: 1.9rem;
             }
