--- a/resources/assets/sass/sites/sweetalk-nl/navbar.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/navbar.scss
@@ -1,659 +1,117 @@
-// Navbar
-//
-// Markup: navbar.hbs
-//
-// The Navbar
-//
-// Style guide: Layout.Navbar
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: transparent;
-    color: #e6e6e6;
-}
-
-.showSelectedLanguage {
-    position: absolute;
-    right: 10px;
-    top: 16px;
-}
-
-.languagesSubmenu {
-    position: relative;
-
-    .dropdown-menu {
-        position: absolute;
-        top: 0;
-        left: -101% !important;
-        margin-top: -1px !important;
-        width: 100%;
-    }
-
-    .flagImageWrapper {
-        position: relative;
-        margin-right: 18px;
-
-        width: 24px;
-        height: 24px;
-    }
-
-    .flagImage {
-        @include roundedImage;
-
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 24px;
-        height: 24px;
-    }
-
-    &__item {
-        display: flex !important;
-    }
-}
-
-.navbar-default .userDropdown .languagesSubmenu .caret {
-    top: 0;
-}
-
-.navbar-default.navbar {
-    @media (max-width: $screen-sm-max) {
-        min-height: $navbarHeightSmallScreens + px;
-    }
-
-    margin-bottom: 0;
-
-    .desktopHomeLink {
-        display: flex;
-
-        .material-icons {
-            margin-right: 5px;
-        }
-    }
-}
-
-.navbar-default.navbar {
-    border: $navbarBorderWidth + px solid $navbarBgColor;
-    border-radius: 0;
-    // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
-    background: $navbarBgColor;
-
+.Navbar {
     position: fixed;
-    width: 100%;
-    z-index: 300;
-    left: 0;
     top: 0;
+    left: 0;
     right: 0;
+    height: $navbarHeight + px;
+    z-index: 100;
 
-    .navbar-toggle {
-        margin-top: ($navbarHeightSmallScreens - 34 - 2) / 2 + px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-        &:focus,
-        &:hover {
-            background-color: initial;
+    background: $navbarBgColor;
+    border-bottom: 1px solid #545454;
+
+    &__brand {
+        position: absolute;
+        left: 16px;
+        top: 0;
+        bottom: 0;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &__logo {
+            height: $logoHeight + px;
         }
     }
 
-    .userCreditsNumber {
-        font-weight: 500;
-        font-size: 20px;
-        color: #ffc3b5;
-    }
+    &__centralMenu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    .navbar-nav {
-        .vertical-separator {
-            position: absolute;
-            right: 0;
-            top: 50%;
-            margin-top: -($navbarHeight - 30)/2 + px;
-            width: 1px;
-            height: $navbarHeight - 30 + px;
-            border-right: 1px solid #5a6982;
+        margin: 0 auto;
+        padding: 0;
+        height: 100%;
+        width: 585px;
 
-            @media (max-width: $screen-sm-max) {
-                display: none;
-            }
-        }
+        &__item {
+            position: relative;
 
-        .userCreditsNumber .userCreditsText {
-            display: inline-block;
-        }
-
-        > li {
-            &.userCredits {
-                display: none;
-                position: relative;
-                align-items: center;
-                justify-content: center;
-                width: 123px;
-                height: $navbarHeight + px;
-                font-size: 20px;
-
-                @media (max-width: $screen-sm-max) {
-                    display: flex;
-                    position: absolute;
-                    right: 20px;
-                    top: 59px;
-                }
-
-                a {
-                    color: $navbarLinkColor;
-                    outline: none;
-
-                    &:hover {
-                        color: darken($navbarLinkColor, 15%);
-                        cursor: pointer;
-                        text-decoration: none;
-                        outline: none;
-                    }
-
-                    &:focus {
-                        text-decoration: none;
-                        outline: none;
-                    }
-                }
-            }
-
-            > a {
-                //background-color: $navbarBgColor;
-                line-height: $navbarLineHeight + px;
-                padding-top: ($navbarHeight - $navbarLineHeight - 2 * $navbarBorderWidth) / 2 + px;
-                padding-bottom: ($navbarHeight - $navbarLineHeight - 2 * $navbarBorderWidth) / 2 + px;
-                color: $navbarLinkColor;
-                font-size: 20px;
-                font-weight: 200;
-
-                &:hover {
-                    color: $tertiaryColor;
-                    cursor: pointer;
-                }
-
-                &:focus {
-                    background-color: transparent;
-                    color: $sugar;
-                }
-            }
-
-            &.userDropdown {
-                position: relative;
-                display: flex;
-                flex-direction: row;
-
-                @media (max-width: $screen-sm-max) {
-                    flex-direction: column;
-                }
-
-                .userDropdown__username {
-                    max-width: 120px;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-
-                    @media (max-width: $screen-md-max) {
-                        max-width: 100px;
-                    }
-
-                    @media (max-width: $screen-sm-max) {
-                        max-width: 200px;
-                    }
-                }
-
-                .dropdown-menu {
-                    padding: 0;
-                    //background-color: #493d3d;
-
-                    li {
-                        border-bottom: 1px solid lighten(#493d3d, 2%);
-
-                        &:last-of-type {
-                            border-bottom: 0;
-                        }
-                    }
-
-                    a {
-                        display: flex;
-                        align-items: center;
-                        padding-top: 5px;
-                        padding-bottom: 5px;
-                        color: $navbarLinkColor;
-                        font-size: 16px;
-                        outline: none;
-
-                        @media (min-width: $screen-md-min) {
-                            background-color: $navbarBgColor;
-                        }
-
-                        &:hover,
-                        &:focus
-                        {
-                            background-color: darken($navbarBgColor, 2%);
-                            color: #fff;
-                            outline: none;
-                        }
-
-                        &.buyCreditsNavLink {
-                            font-weight: 600;
-                            color: $secondaryColor;
-                        }
-
-                        .material-icons {
-                            width: 40px;
-                        }
-                    }
-                }
-
-                @media (min-width: $screen-md-min) {
-                    &.open {
-                        > a {
-                            background-color: darken($navbarBgColor, 2%);
-                            color: $white;
-                        }
-                    }
-                }
-
-            }
-        }
-
-        > .active {
-            > a {
-                background-color: transparent;
-                color: $white;
-                font-weight: 500;
-
-                &:focus {
-                    color: $white;
-                    background-color: transparent;
-                }
-            }
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            flex: 1;
+            color: #fff;
+            cursor: pointer;
+            text-decoration: none;
 
             &:hover {
-                > a {
-                    background-color: transparent;
-                    color: $sugar;
-                }
+                color: #fff;
+                text-decoration: none;
             }
 
-            &:focus {
-                > a {
-                    background-color: transparent;
-                    color: $sugar;
-                }
+            &:focus,
+            &:active {
+                color: #fff;
+                text-decoration: none;
+            }
+
+            &.active {
+                color: $secondaryColor;
+
+                border-bottom: 3px solid $secondaryColor;
+                border-top: 3px transparent;
+            }
+
+            &__icon {
+                font-size: 32px !important;
             }
         }
     }
 
-    #goToAdmin {
+    &__rightMenu {
         position: absolute;
-        background-color: rgba(0, 0, 0, 0.2);
-        border-radius: 0 0 10px 10px;
-        left: 20px;
-        border: 1px solid #fff;
-        border-top: 0;
-        text-align: center;
-        width: 100px;
-        z-index: 1000;
+        right: 16px;
+        top: 0;
+        bottom: 0;
+        height: 100%;
 
-        a {
-            color: $white;
-        }
-    }
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    .userDropdown {
-        position: relative;
-
-        &__image {
-            @include roundedImage;
-
-            position: absolute;
-            left: 12px;
-            top: ($navbarHeight - 33) / 2 + px;
-            width: 31px;
-            height: 32px;
-        }
-
-        .dropdown-toggle {
-            display: flex;
-            align-items: center;
-            flex-direction: row;
-            padding-left: 55px;
-        }
-
-        .dropdown-menu {
-            min-width: 300px;
-
-            a {
-                padding-top: 15px !important;
-                padding-bottom: 15px !important;
-            }
-        }
-    }
-}
-
-.navbar .navbar-brand {
-    display: inline-block;
-    height: auto;
-    padding-top: ($navbarHeight - $logoHeight - 2 * $navbarBorderWidth) / 2 + px;
-
-    @media (max-width: 531px) {
-        padding-top: ($navbarHeightSmallScreens - $logoHeight - 2 * $navbarBorderWidth) / 2 + px;
-    }
-
-    @media (min-width: 531px) and (max-width: $screen-sm-max) {
-        padding-top: ($navbarHeightSmallScreens - $logoHeight - 2 * $navbarBorderWidth + 6) / 2 + px;
-    }
-
-    padding-bottom: 0;
-
-    //@media screen and (min-width: $screen-md-min) {
-    //    padding-top: 6px;
-    //    padding-bottom: 6px;
-    //}
-
-    > img {
-        height: $logoHeight + px;
-
-        @media screen and (max-width: $screen-sm-max) {
-            height: 30px;
-        }
-
-        @media screen and (min-width: $screen-md-min) {
-            height: 36px;
-        }
-    }
-}
-.navbar-default.navbar {
-
-    // change navbar collapse breakpoint
-    @media (max-width: $screen-sm-max) {
-        .showMobile {
-            display: block !important;
-        }
-
-        .showDesktop {
-            display: none !important;
-        }
-
-        .navbar-header {
-            float: none;
-            position: relative;
-        }
-        .navbar-left, .navbar-right {
-            float: none !important;
-        }
-        .navbar-toggle {
-            display: block;
-        }
-        .navbar-collapse {
-            border-top: 1px solid transparent;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        }
-        .navbar-fixed-top {
-            top: 0;
-            border-width: 0 0 1px;
-        }
-        .navbar-collapse.collapse {
-            display: none !important;
-        }
-        .navbar-nav {
-            float: none !important;
-            margin-top: 7.5px;
-        }
-        .navbar-nav > li {
-            float: none;
-        }
-        .navbar-nav > li > a {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-        .collapse.in {
-            display: block !important;
-        }
-
-        .navbar-nav .dropdown-menu {
-            position: static;
-            float: none;
-            width: auto;
-            margin-top: 0;
-            background-color: transparent;
-            border: 0;
-            -webkit-box-shadow: none;
-            box-shadow: none;
-        }
-
-        .userDropdown > .dropdown-menu.main-dropdown {
-            display: block;
-            position: static;
-            background-color: transparent;
-            border: 0 none;
-            box-shadow: none;
-            margin-top: 0;
-            width: 100%;
-        }
-        //.navbar-nav .dropdown-menu > li > a,
-        //.navbar-nav .dropdown-menu .dropdown-header {
-        //    padding: 5px 15px 5px 25px;
-        //}
-        //.navbar-nav .dropdown-menu > li > a {
-        //    line-height: 20px;
-        //}
-        //.navbar-default .navbar-nav .dropdown-menu > li > a {
-        //    color: #777;
-        //}
-    }
-}
-
-@media (min-width: $screen-md-min) {
-    .showMobile {
-        display: none !important;
-    }
-
-    .showDesktop {
-        display: block !important;
-    }
-}
-
-.navbar-default.navbar {
-    .container {
-        position: relative;
-    }
-
-    //@keyframes shine{
-    //    80% {
-    //        opacity: 0.4;
-    //        top: 0;
-    //        left: 8px;
-    //        transition-property: left, top, opacity;
-    //        //transition-timing-function: ease-out;
-    //    }
-    //    90% {
-    //        opacity: 1;
-    //        transition-property: left, top, opacity;
-    //    }
-    //
-    //    100% {
-    //        opacity: 0;
-    //        top: 0;
-    //        left: 100%;
-    //        transition-property: left, top, opacity;
-    //        transition-timing-function: ease-out;
-    //    }
-    //}
-
-    .creditsLinkLargeScreens {
-        @media (max-width: $screen-sm-max) {
-            display: none;
-        }
-    }
-
-    .logoImage {
-        display: inline-block;
-
-        @media (max-width: 530px) {
-            display: none;
-        }
-    }
-
-    .logoImageSmall {
-        display: none;
-
-        @media (max-width: 530px) {
-            display: inline-block;
-        }
-    }
-
-    .navbar-brand {
-        @media (max-width: 530px) {
-            img {
-                height: 38px;
-            }
-
-            //padding-top: 11px;
-            padding-bottom: 0;
-        }
-    }
-
-    .searchToggleButton {
-        display: none;
-
-        @media (max-width: $screen-sm-max) {
-            display: flex;
-        }
-
-        position: absolute;
         cursor: pointer;
 
-        flex-direction: row;
-        align-content: center;
-        justify-content: center;
-        left: 600px;
-        top: ($navbarHeight - $searchToggleButtonHeight - 2) / 2 + px;
-
-        @media (max-width: $screen-sm-max) {
-            top: ($navbarHeightSmallScreens - $buyCreditsButtonHeight - 2) / 2 + px;
-        }
-
-        font-size: 2rem;
-        text-align: center;
-
-        width: 131px;
-        height: $searchToggleButtonHeight + px;
-
-        border-radius: 6px;
-
-        background-color: $secondaryColor;
-        color: #fff;
-        font-weight: 400;
-
-        @media (max-width: $screen-md-max) {
-            left: 415px;
-        }
-
-        @media (max-width: $screen-sm-max) {
-            left: 360px;
-        }
-
-        @media (max-width: $screen-xs-max) {
-            left: 200px;
-        }
-
-        @media screen and (max-width: 600px) {
-            left: 150px;
-        }
-
-        @media screen and (max-width: 530px) {
-            font-size: 1.6rem;
-            left: 120px;
-            width: 100px;
-        }
-
-        @media screen and (max-width: 400px) {
-            left: 63px;
-        }
-
-        //@media (max-width: 400px) {
-        //    width: 40px;
-        //    height: 40px;
-        //    border-radius: 50%;
-        //    top: 5px;
-        //
-        //    .searchToggleButtonText {
-        //        display: none;
-        //    }
-        //}
-
-        &:hover {
-            background-color: darken($secondaryColor, 3%);
-        }
-
-        span {
+        &__profileImage {
             display: flex;
             align-items: center;
-            margin-right: 5px;
+            justify-content: center;
+
+            height: 40px;
+            width: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+
+            margin-right: 10px;
         }
 
+        &__username {
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-        &.pressed {
-            border: 1px solid darken($secondaryColor, 3%);
-            background-color: darken($secondaryColor, 3%);
+            color: #fff;
+            font-size: 2rem;
         }
 
-        .material-icons {
-            position: relative;
-            top: 3px;
-            width: 14px;
-
-            //@media (max-width: 400px) {
-            //    top: 7px;
-            //    width: 21px;
-            //}
-        }
-    }
-
-    .userCredits__smallScreens {
-        display: none;
-        position: absolute;
-        left: 534px;
-        height: $navbarHeight + px;
-        line-height: $navbarHeightSmallScreens + px;
-
-        @media screen and (max-width: $screen-sm-max) {
-            display: block;
-        }
-
-        @media screen and (max-width: $screen-xs-max) {
-            left: 400px;
-        }
-
-        @media screen and (max-width: 600px) {
-            left: 330px;
-        }
-
-        @media screen and (max-width: 530px) {
-            .userCreditsNumber {
-                font-size: 1.4rem;
-            }
-
-            //top: 15px;
-            left: 260px;
-        }
-
-        @media screen and (max-width: 400px) {
-            left: 180px;
-        }
-
-        //@media screen and (max-width: 400px) {
-        //    left: 255px;
-        //}
-    }
-
-    //.userCreditsText {
-    //    @media screen and (max-width: 400px) {
-    //        display: none;
-    //    }
-    //}
-
-    @media (max-width: $screen-sm-max) {
-        .searchBarContainer {
-            display: none
+        &__downIcon {
+            color: #fff;
         }
     }
 }
