--- a/resources/assets/sass/components/sites/liefdesdate-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/liefdesdate-nl/private-chat-manager.scss
@@ -263,7 +263,7 @@
 
     &.maximized {
         .PrivateChatManager__body {
-            display: block;
+            display: block !important;
         }
     }
 
