--- a/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/private-chat-manager.scss
@@ -261,7 +261,7 @@
 
     &.maximized {
         .PrivateChatManager__body {
-            display: block;
+            display: block !important;
         }
     }
 
