--- a/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
@@ -28,11 +28,10 @@
         }
     }
 
-
     .fetchMoreButton,
     .fetchingMessages,
     .allMessagesFetched {
-        margin: 0px auto;
+        margin: 0 auto;
         //height: 40px;
         display: flex;
         justify-content: center;
@@ -85,7 +84,7 @@
     }
 
     &__body {
-        margin-left: 60px;
+        margin-left: 44px;
 
         p {
             font-size: 1.6rem;
@@ -120,8 +119,8 @@
         border-radius: 6px;
         -o-object-fit: cover;
         object-fit: cover;
-        width: 50px;
-        height: 50px;
+        width: 36px;
+        height: 36px;
     }
 
     &__header {
