--- a/resources/assets/sass/modules/sites/sweetalk-nl/module-profiles.scss
+++ b/resources/assets/sass/modules/sites/sweetalk-nl/module-profiles.scss
@@ -1,16 +1,13 @@
 .ModuleProfiles {
-    &__sendMessage {
+    &__button {
         margin-bottom: 10px;
         border: 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex: 1;
 
-        width: 100%;
         height: 30px;
-        border-radius: 0 0 3px 3px;
-        background-color: lighten($secondaryColor, 5%);
-        // box-shadow: 1px 2px 2px rgba(0,0,0,0.3);
 
         cursor: pointer;
 
@@ -21,14 +18,33 @@
         }
 
         &__icon {
-            font-size: 1.6rem !important;
+            font-size: 1.8rem !important;
             color: $white;
-            margin-right: 6px;
         }
 
-        &:hover {
+        &.sendMessage {
             background-color: $secondaryColor;
+            border-radius: 0 0 0 3px;
+
+            &:hover {
+                background-color: darken($secondaryColor, 5%);
+            }
         }
+
+        &.seeProfile {
+            background-color: $mainColor;
+            border-radius: 0 0 3px 0;
+            text-decoration: none;
+
+            &:hover {
+                background-color: darken($mainColor, 5%);
+            }
+        }
+    }
+
+    &__buttons {
+        display: flex;
+        flex-direction: row;
     }
 
     .Online-users__heading {
