--- a/resources/assets/sass/sites/sweetalk-nl/hero.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/hero.scss
@@ -12,11 +12,13 @@
     }
 
     @media (max-width: $screen-sm-max) {
-        height: 220px;
+        height: 260px;
+        padding-bottom: 0;
     }
 
     @media (max-width: $screen-xs-max) {
-        height: 150px;
+        height: 210px;
+        padding-bottom: 0;
     }
 
     &__profileImage {
@@ -24,12 +26,30 @@
         height: 130px;
         width: 130px;
         object-fit: cover;
+
+        @media (max-width: $screen-sm-max) {
+            height: 85px;
+            width: 85px;
+        }
+
+        @media (max-width: $screen-xs-max) {
+            height: 60px;
+            width: 60px;
+        }
     }
 
     &__textContainer {
         font-size: 3rem;
         color: #fff;
         margin-bottom: 15px;
+
+        @media (max-width: $screen-sm-max) {
+            font-size: 2.3rem;
+        }
+
+        @media (max-width: $screen-xs-max) {
+            font-size: 1.8rem;
+        }
     }
 
     &__profileImageContainer {
@@ -66,6 +86,14 @@
         cursor: pointer;
         margin-bottom: 0px;
         text-decoration: none;
+
+        @media (max-width: $screen-sm-max) {
+            padding: 9px;
+        }
+
+        @media (max-width: $screen-xs-max) {
+            padding: 5px;
+        }
 
         .material-icons {
             color: #fff;
@@ -112,7 +140,7 @@
                 //border-radius: 50%;
                 background: transparent;
                 color: #ff4343;
-                font-size: 1.4rem;
+                font-size: 1.7rem;
                 font-weight: 500;
             }
         }
