--- a/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
@@ -4,8 +4,8 @@
 
     &__textareaAndButtonContainer {
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+        align-items: flex-end;
     }
 
     .labelNew {
@@ -54,7 +54,8 @@
     &__textarea.form-control {
         overflow: hidden;
         height: 38px;
-        margin-right: 10px;
+        margin-right: 0px;
+        width: 100%;
     }
 
     &__timeAgo {
@@ -157,15 +158,25 @@
             background-color: $secondaryColor;
             -webkit-box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+            margin-top: 5px;
+
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             &:hover {
                 background-color: darken($secondaryColor, 5%);
+                color: #fff;
             }
         }
 
         textarea {
             resize: none;
         }
+    }
+
+    &__submitButton {
+        width: 100%;
     }
 
     &__countChars {
