--- a/resources/assets/sass/views/sites/sweetalk-nl/credits.scss
+++ b/resources/assets/sass/views/sites/sweetalk-nl/credits.scss
@@ -270,7 +270,7 @@ Table of Contents End
             position: relative;
 
             &:not(.table-rose):hover {
-                background: lighten($secondaryColor, 40%);
+                background: #e8dee1;
             }
         }
 
