--- a/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
+++ b/resources/assets/sass/components/sites/sweetalk-nl/public-chat.scss
@@ -59,15 +59,17 @@
     }
 
     &__timeAgo {
+        margin-bottom: 10px;
+
         color: $secondaryColor;
 
         @media (max-width: $screen-xs-max) {
             font-size: 11px;
         }
 
-        @media (min-width: 992px) and (max-width: 1210px) {
-            display: none;
-        }
+        //@media (min-width: 992px) and (max-width: 1210px) {
+        //    display: none;
+        //}
     }
 
     &__panel {
