--- a/resources/assets/sass/sites/altijdsex-nl/adsLps.scss
+++ b/resources/assets/sass/sites/altijdsex-nl/adsLps.scss
@@ -17,7 +17,10 @@ body {
         padding-bottom: 20px;
     }
 }
-
+.help-block {
+    font-size: 13px;
+    color: red;
+}
 .wizard-card .tab-content {
     min-height: 328px;
 }
