--- a/resources/assets/sass/sites/liefdesdate-nl/adsLps.scss
+++ b/resources/assets/sass/sites/liefdesdate-nl/adsLps.scss
@@ -25,6 +25,11 @@ body {
     font-size: 14px;
 }
 
+.help-block {
+    font-size: 13px;
+    color: red;
+}
+
 .imgHeader {
     background: url('/lps/t1/assets/img/lp-3.jpg') center/cover no-repeat;
     min-height: 120px;
