--- a/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
@@ -20,7 +20,10 @@ body {
         padding-top: 20px;
     }
 }
-
+.help-block {
+    font-size: 13px;
+    color: red;
+}
 .logoHeading {
     background: $mainColor;
     padding: 5px;
