--- a/resources/assets/sass/components/sites/liefdesdate-nl/private-chat-manager.scss
+++ b/resources/assets/sass/components/sites/liefdesdate-nl/private-chat-manager.scss
@@ -41,6 +41,9 @@
             &__text {
                 position: relative;
                 font-size: 1.9rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
 
