--- a/resources/assets/sass/sites/liefdesdate-nl/adsLps.scss
+++ b/resources/assets/sass/sites/liefdesdate-nl/adsLps.scss
@@ -1,10 +1,16 @@
 @import "resources/assets/sass/liefdesdate-nl-variables";
 
+@import "footer";
+
 body {
     /*font-size: 1.9rem;*/
     font-weight: 300;
 
     font-family: 'Fira Sans', sans-serif;
+}
+
+a, a:hover {
+    text-decoration: none !important;
 }
 
 .bg-img {
@@ -28,6 +34,23 @@ body {
 .help-block {
     font-size: 13px;
     color: red;
+}
+
+.roundImage {
+    width: 163px;
+    height: 163px;
+    border-radius: 3px;
+    object-fit: cover;
+    transform: translateY(-0.5rem);
+}
+
+h5.recentUsername {
+    font-size: 19px;
+    font-weight: 700;
+    color: $secondaryColor;
+    letter-spacing: 1px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .imgHeader {
