--- a/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
@@ -7,6 +7,25 @@ body {
     font-family: 'Fira Sans', sans-serif;
 }
 
+//.separator {
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+//
+//    background-color: $secondaryColor;
+//    color: #fff;
+//
+//    @media (min-width: 992px) {
+//        //height: 80px;
+//        font-size: 30px;
+//        font-weight: 500;
+//    }
+//}
+
+a, a:hover {
+    text-decoration: none !important;
+}
+
 .roundImage {
     width: 150px;
     height: 150px;
@@ -26,7 +45,7 @@ h5.recentUsername {
 
 .bg-img {
     /* Control the height of the image */
-    background-image: url('/img/couple.jpg');
+    background-image: url('/img/couple3.jpg');
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -37,10 +56,12 @@ h5.recentUsername {
         padding-top: 20px;
     }
 }
+
 .help-block {
     font-size: 13px;
     color: red;
 }
+
 .logoHeading {
     background: $mainColor;
     padding: 5px;
@@ -56,7 +77,7 @@ h5.recentUsername {
 }
 
 .imgHeader {
-    background: url('/img/couple.jpg') center/cover no-repeat;
+    background: url('/img/couple3.jpg') center/cover no-repeat;
 }
 
 .logo img {
@@ -65,7 +86,7 @@ h5.recentUsername {
 
 @media (min-width: 768px) {
     .bg-img {
-        background-image: url('/img/couple.jpg');
+        background-image: url('/img/couple3.jpg');
         min-height: 680px;
     }
 
