--- a/public/css/altijdsex-nl/adsLps.css
+++ b/public/css/altijdsex-nl/adsLps.css
@@ -1,55 +1,2 @@
-body {
-  /*font-size: 1.9rem;*/
-  font-weight: 300;
-  font-family: 'Fira Sans', sans-serif;
-  background-color: #fff;
-}
-
-.wizard-card .tab-content {
-  padding-bottom: 0;
-}
-
-@media (max-width: 767px) {
-  .tab-pane.first {
-    padding-bottom: 20px;
-  }
-}
-
-.help-block {
-  font-size: 13px;
-  color: red;
-}
-
-.wizard-card .tab-content {
-  min-height: 328px;
-}
-
-@media screen and (max-width: 767px) {
-  .wizard-card .tab-content {
-    min-height: 160px;
-  }
-}
-
-.tab-pane.second {
-  margin-bottom: 0 !important;
-}
-
-.logo-container {
-  position: relative;
-  z-index: 100;
-}
-
-.wizard-card[data-color="red"] .moving-tab {
-  background-color: #e4543a !important;
-}
-
-.btn.btn-danger {
-  background-color: #e4543a !important;
-}
-
-.wizard-card[data-color="red"] .choice:hover .icon,
-.wizard-card[data-color="red"] .choice.active .icon {
-  border-color: #e4543a !important;
-  color: #e4543a !important;
-}
-
+body{font-weight:300;font-family:Fira Sans,sans-serif;background-color:#fff}.wizard-card .tab-content{padding-bottom:0}@media (max-width:767px){.tab-pane.first{padding-bottom:20px}}.help-block{font-size:13px;color:red}.wizard-card .tab-content{min-height:328px}@media screen and (max-width:767px){.wizard-card .tab-content{min-height:160px}}.tab-pane.second{margin-bottom:0!important}.logo-container{position:relative;z-index:100}.btn.btn-danger,.wizard-card[data-color=red] .moving-tab{background-color:#e4543a!important}.wizard-card[data-color=red] .choice.active .icon,.wizard-card[data-color=red] .choice:hover .icon{border-color:#e4543a!important;color:#e4543a!important}
+/*# sourceMappingURL=adsLps.css.map*/
