thank you pages

--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -54,6 +54,7 @@
 @import "views/sites/altijdsex-nl/edit-profile";
 @import "views/sites/altijdsex-nl/credits";
 @import "views/sites/altijdsex-nl/contact";
+@import "views/sites/altijdsex-nl/thank-you";
 @import "views/welcome-modal";
 
 @import "vue-apps/private-chat/main";
