--- a/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
+++ b/resources/assets/sass/sites/sweetalk-nl/adsLps.scss
@@ -45,7 +45,7 @@ h5.recentUsername {
 
 .bg-img {
     /* Control the height of the image */
-    background-image: url('/img/couple3.jpg');
+    background-image: url('/img/sites/sweetalk-nl/lp1-header.jpg');
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -77,7 +77,7 @@ h5.recentUsername {
 }
 
 .imgHeader {
-    background: url('/img/couple3.jpg') center/cover no-repeat;
+    background: url('/img/sites/sweetalk-nl/lp1-header.jpg') center/cover no-repeat;
 }
 
 .logo img {
@@ -86,7 +86,7 @@ h5.recentUsername {
 
 @media (min-width: 768px) {
     .bg-img {
-        background-image: url('/img/couple3.jpg');
+        background-image: url('/img/sites/sweetalk-nl/lp1-header.jpg');
         min-height: 680px;
     }
 
