--- a/resources/assets/sass/sweetalk-nl.scss
+++ b/resources/assets/sass/sweetalk-nl.scss
@@ -55,6 +55,7 @@
 @import "views/sites/sweetalk-nl/edit-profile";
 @import "views/sites/sweetalk-nl/credits";
 @import "views/sites/sweetalk-nl/contact";
+@import "views/sites/sweetalk-nl/thank-you";
 @import "views/welcome-modal";
 
 @import "vue-apps/private-chat/main";
