--- a/resources/assets/sass/components/button.scss
+++ b/resources/assets/sass/components/button.scss
@@ -27,6 +27,11 @@
     text-overflow: ellipsis;
     box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
+    .centered {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     &--tall {
         padding: 20px 20px;
     }
