--- a/resources/assets/sass/altijdsex-nl.scss
+++ b/resources/assets/sass/altijdsex-nl.scss
@@ -59,6 +59,15 @@
 
 @import "vue-apps/private-chat/main";
 
+.fullWrapper {
+  &.withBackground {
+    background-image: url('/img/sites/altijdsex-nl/password-reset-bg.jpg');
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 .GeneralBackButton {
   margin-top: -10px;
   display: flex;
