--- a/resources/assets/sass/sweetalk-nl.scss
+++ b/resources/assets/sass/sweetalk-nl.scss
@@ -66,6 +66,13 @@
   @media (max-width: $screen-xs-max) {
     margin-top: $navbarHeightSmallScreens * 2 + px;
   }
+
+  &.withBackground {
+    background-image: url('/img/sites/sweetalk-nl/password-reset-bg.jpg');
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 body.scrolled {
